fixed errors in classes